// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.updateArtifacts() catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "go.sum",
      "stderr": "This update totally doesnt work",
    },
  },
]
`;

exports[`.updateArtifacts() catches errors 2`] = `Array []`;

exports[`.updateArtifacts() ignore docker mode passthrough of invalid GIT_CONFIG_COUNT 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -v \\"/tmp/renovate/cache/others/go\\":\\"/tmp/renovate/cache/others/go\\" -e GOPATH -e GOPROXY -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -e GOPRIVATE -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d ./...\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns if no go.sum found 1`] = `Array []`;

exports[`.updateArtifacts() returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns updated go.sum 1`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() skips updating import paths for gopkg.in dependencies 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New go.sum",
      "name": "go.sum",
    },
  },
  Object {
    "file": Object {
      "contents": "New go.mod",
      "name": "go.mod",
    },
  },
]
`;

exports[`.updateArtifacts() skips updating import paths for gopkg.in dependencies 2`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() skips updating import paths with gomodUpdateImportPaths on v0 to v1 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New go.sum",
      "name": "go.sum",
    },
  },
  Object {
    "file": Object {
      "contents": "New go.mod",
      "name": "go.mod",
    },
  },
]
`;

exports[`.updateArtifacts() skips updating import paths with gomodUpdateImportPaths on v0 to v1 2`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() supports docker mode passthrough of GIT_CONFIG_COUNT 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -v \\"/tmp/renovate/cache/others/go\\":\\"/tmp/renovate/cache/others/go\\" -e GOPATH -e GOPROXY -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -e GIT_CONFIG_COUNT -e GOPRIVATE -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d ./...\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GIT_CONFIG_COUNT": "2",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() supports docker mode with credentials 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -v \\"/tmp/renovate/cache/others/go\\":\\"/tmp/renovate/cache/others/go\\" -e GOPATH -e GOPROXY -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -e GIT_CONFIG_KEY_0 -e GIT_CONFIG_VALUE_0 -e GIT_CONFIG_COUNT -e GOPRIVATE -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d ./...\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GIT_CONFIG_COUNT": "1",
        "GIT_CONFIG_KEY_0": "url.https://some-token@github.com.insteadOf",
        "GIT_CONFIG_VALUE_0": "https://github.com",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() supports docker mode with custom credentials 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -v \\"/tmp/renovate/cache/others/go\\":\\"/tmp/renovate/cache/others/go\\" -e GOPATH -e GOPROXY -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -e GIT_CONFIG_KEY_0 -e GIT_CONFIG_VALUE_0 -e GIT_CONFIG_KEY_1 -e GIT_CONFIG_VALUE_1 -e GIT_CONFIG_KEY_2 -e GIT_CONFIG_VALUE_2 -e GIT_CONFIG_KEY_3 -e GIT_CONFIG_VALUE_3 -e GIT_CONFIG_KEY_4 -e GIT_CONFIG_VALUE_4 -e GIT_CONFIG_COUNT -e GOPRIVATE -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d ./...\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GIT_CONFIG_COUNT": "5",
        "GIT_CONFIG_KEY_0": "url.https://some-github-enterprise-token@github.enterprise.com/.insteadOf",
        "GIT_CONFIG_KEY_1": "url.https://some-git-private-token@git.private.com/.insteadOf",
        "GIT_CONFIG_KEY_2": "url.https://some-git2-private-token@git2.private.com/.insteadOf",
        "GIT_CONFIG_KEY_3": "url.https://some-git3-private-token@git3.private.com/test-org.insteadOf",
        "GIT_CONFIG_KEY_4": "url.https://username:password@git4.private.com/.insteadOf",
        "GIT_CONFIG_VALUE_0": "https://github.enterprise.com/",
        "GIT_CONFIG_VALUE_1": "https://git.private.com/",
        "GIT_CONFIG_VALUE_2": "https://git2.private.com/",
        "GIT_CONFIG_VALUE_3": "https://git3.private.com/test-org",
        "GIT_CONFIG_VALUE_4": "https://git4.private.com/",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*,github.enterprise.com/,git.private.com/,git2.private.com/,git3.private.com/test-org,git4.private.com/",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() supports docker mode with goModTidy 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -v \\"/tmp/renovate/cache/others/go\\":\\"/tmp/renovate/cache/others/go\\" -e GOPATH -e GOPROXY -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -e GOPRIVATE -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d ./... && go mod tidy && go mod tidy\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() supports docker mode without credentials 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -v \\"/tmp/renovate/cache/others/go\\":\\"/tmp/renovate/cache/others/go\\" -e GOPATH -e GOPROXY -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -e GOPRIVATE -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d ./...\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() supports global mode 1`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() supports vendor directory update 1`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod vendor",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() updates import paths with gomodUpdateImportPaths 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New go.sum",
      "name": "go.sum",
    },
  },
  Object {
    "file": Object {
      "contents": "New main.go",
      "name": "main.go",
    },
  },
  Object {
    "file": Object {
      "contents": "New go.mod",
      "name": "go.mod",
    },
  },
]
`;

exports[`.updateArtifacts() updates import paths with gomodUpdateImportPaths 2`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go install github.com/marwan-at-work/mod/cmd/mod@latest",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "mod upgrade --mod-name=github.com/google/go-github/v24 -t=28",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() updates import paths with latest tool version on invalid version constraint 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New go.sum",
      "name": "go.sum",
    },
  },
  Object {
    "file": Object {
      "contents": "New main.go",
      "name": "main.go",
    },
  },
  Object {
    "file": Object {
      "contents": "New go.mod",
      "name": "go.mod",
    },
  },
]
`;

exports[`.updateArtifacts() updates import paths with latest tool version on invalid version constraint 2`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go install github.com/marwan-at-work/mod/cmd/mod@latest",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "mod upgrade --mod-name=github.com/google/go-github/v24 -t=28",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() updates import paths with specific tool version from constraint 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New go.sum",
      "name": "go.sum",
    },
  },
  Object {
    "file": Object {
      "contents": "New main.go",
      "name": "main.go",
    },
  },
  Object {
    "file": Object {
      "contents": "New go.mod",
      "name": "go.mod",
    },
  },
]
`;

exports[`.updateArtifacts() updates import paths with specific tool version from constraint 2`] = `
Array [
  Object {
    "cmd": "go get -d ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go install github.com/marwan-at-work/mod/cmd/mod@v1.2.3",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "mod upgrade --mod-name=github.com/google/go-github/v24 -t=28",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPATH": "/tmp/renovate/cache/others/go",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
